--------------------------------------------------------------------------------
Changes for 2.0.0rc3

New features:
..F....... [ZBX-1357] updated French, German, Greek, Japanese, Polish, Russian and Turkish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-4802] improved memory de-allocation code clarity (Andris)
..F....... [ZBX-4739] fixed mass update failing with many items selected (Toms)
..F....... [ZBX-4821] fixed flexible interval update using item mass update form (Vedmak)
..F....... [ZBX-4806] fixed "New flexible interval" not shown in item form (Toms)
A.F....... [ZBX-4790] fixed *EROR*s in trigger expressions in items.php; fixed undefined variables when filtering without host (Toms)
..F....... [ZBX-3725] added check for xml file size exceeds upload_max_filesize php setting (Vedmak)
A.F....... [ZBX-3991] forbid passive proxy interfaces with ip 0.0.0.0 (Vedmak)
..F....... [ZBX-3152] fixed messages are shown even if all severities are unchecked (Vedmak)
....I..... [ZBXNEXT-397] removed records from "ids" table to prevent SQL errors while adding a new item (Sasha)
..F....... [ZBX-4811] added 'filter' and 'lifetime' fields to discovery rules export (Vedmak)
...G...... [ZBX-4801] fixed processing of proc.num[] and proc.mem[] checks with name of processes more than 15 characters (Sasha)
..F....... [ZBX-4792] fixed missing field "Allowed hosts" when item type Zabbix trapper (Toms)
..F....... [ZBX-4038] fixed warnings for incorrect input values (Toms)
..F....... [ZBX-4781] fixed error message when copying items to multiple hosts (Toms)

--------------------------------------------------------------------------------
Changes for 2.0.0rc2

New features:
........S. [ZBXNEXT-1162] improved performance of processing of triggers by history syncers and timer processes (Sasha)
A.F....... [ZBXNEXT-1149] import of nested maps, import form redesign (Vedmak)