@@ -44,6 +44,7 @@ my $uniq;
 	"t_id"		=>	"ZBX_TYPE_ID",
 	"t_image"	=>	"ZBX_TYPE_BLOB",
 	"t_integer"	=>	"ZBX_TYPE_INT",
+	"t_longtext"	=>	"ZBX_TYPE_TEXT",
 	"t_nanosec"	=>	"ZBX_TYPE_INT",
 	"t_serial"	=>	"ZBX_TYPE_UINT",
 	"t_text"	=>	"ZBX_TYPE_TEXT",
@@ -90,6 +91,7 @@ const ZBX_TABLE\ttables[] = {
 	"t_id"		=>	"bigint",
 	"t_image"	=>	"blob",
 	"t_integer"	=>	"integer",
+	"t_longtext"	=>	"varchar(2048)",
 	"t_nanosec"	=>	"integer",
 	"t_serial"	=>	"bigint",
 	"t_text"	=>	"varchar(2048)",
@@ -112,6 +114,7 @@ const ZBX_TABLE\ttables[] = {
 	"t_id"		=>	"bigint unsigned",
 	"t_image"	=>	"longblob",
 	"t_integer"	=>	"integer",
+	"t_longtext"	=>	"longtext",
 	"t_nanosec"	=>	"integer",
 	"t_serial"	=>	"bigint unsigned",
 	"t_text"	=>	"text",
@@ -133,6 +136,7 @@ const ZBX_TABLE\ttables[] = {
 	"t_id"		=>	"number(20)",
 	"t_image"	=>	"blob",
 	"t_integer"	=>	"number(10)",
+	"t_longtext"	=>	"nclob",
 	"t_nanosec"	=>	"number(10)",
 	"t_serial"	=>	"number(20)",
 	"t_text"	=>	"nvarchar2(2048)",
@@ -155,6 +159,7 @@ const ZBX_TABLE\ttables[] = {
 	"t_id"		=>	"bigint",
 	"t_image"	=>	"bytea",
 	"t_integer"	=>	"integer",
+	"t_longtext"	=>	"text",
 	"t_nanosec"	=>	"integer",
 	"t_serial"	=>	"serial",
 	"t_text"	=>	"text",
@@ -176,6 +181,7 @@ const ZBX_TABLE\ttables[] = {
 	"t_id"		=>	"bigint",
 	"t_image"	=>	"longblob",
 	"t_integer"	=>	"integer",
+	"t_longtext"	=>	"text",
 	"t_nanosec"	=>	"integer",
 	"t_serial"	=>	"integer",
 	"t_text"	=>	"text",
