@@ -905,7 +905,7 @@ FIELD		|clock		|t_time		|'0'	|NOT NULL	|0
 FIELD		|timestamp	|t_time		|'0'	|NOT NULL	|0
 FIELD		|source		|t_varchar(64)	|''	|NOT NULL	|0
 FIELD		|severity	|t_integer	|'0'	|NOT NULL	|0
-FIELD		|value		|t_history_log	|''	|NOT NULL	|0
+FIELD		|value		|t_longtext	|''	|NOT NULL	|0
 FIELD		|logeventid	|t_integer	|'0'	|NOT NULL	|0
 FIELD		|ns		|t_nanosec	|'0'	|NOT NULL	|0
 FIELD		|status		|t_integer	|'0'	|NOT NULL	|0
